--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   /* background: color image repeat position/size */
 
   background: var(--bg-url) top center/cover;
+  height: 100vh;
 }
 
 * {
@@ -181,4 +182,15 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
